[project]
name = "uhppoted"
version = "0.9.1.1"
authors = [
  { name="uhppoted", email="uhppoted.development@gmail.com" },
]
description = "Python API for the UHPPOTE TCP/IP access controllers"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/uhppoted/uhppoted-lib-python"
"Bug Tracker" = "https://github.com/uhppoted/uhppoted-lib-python/issues"

[project.optional-dependencies]
dev = [
    "toml ~=0.10.2",
    "black ~=26.5.1",
    "build ~=1.5.0",
    "twine ~=6.2.0",
]

test = [
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py310']
line-length = 132
